tests/regression/400_RUNTIME_FEATURES/430_COORDINATION/430_006_coordinator_timing/expected.txt
error[PARSE003]: branch constructor field 'metrics' contains a function call — branch constructors must be pure. Use event chaining instead.
  --> tests/regression/400_RUNTIME_FEATURES/430_COORDINATION/430_006_coordinator_timing/input.kz:19:1
    |
 19 |     | error e |> error { message: e.message }
    | ^

